--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>anotherdnd</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<title>anotherdnd</title>
+</head>
+<body>
+	<!-- <div id="app"></div> -->
+	
+	<!-- Navigation -->
+	<nav class="navbar is-dark" role="navigation">
+		<div class="navbar-menu">
+
+			<!-- Right elements -->
+			<div class="navbar-end">
+				<a class="navbar-item is-active">Home</a>
+				
+				<!-- Dropdown -->
+				<div class="navbar-item has-dropdown is-hoverable">
+					<a class="navbar-link">Spellbook</a>
+
+					<!-- Dropdown elements -->
+					<div class="navbar-dropdown is-boxed is-right">
+						<a class="navbar-item">Spells</a>
+						<a class="navbar-item">Other Information</a>			
+					</div>
+				</div>
+				<a class="navbar-item">Monsters</a>
+			</div>
+
+		</div>
+
+	</nav>
+
+	<!-- Hero -->
+	<section class="hero is-medium is-dark is-bold">
+		<div class="hero-body">
+
+			<div class="container">
+
+				<div class="columns is-vcentered">
+
+					<!-- Text -->
+					<div class="column is-one-half has-text-centered">
+						<h1 class="title is-size-1">Another DnD</h1>
+						<h2 class="subtitle">Just another DnD app.</h2>
+					</div>
+
+					<!-- Example screenshot -->
+					<div class="column">
+
+						<figure class="image is-16by9">
+							<img src="https://bulma.io/images/placeholders/640x360.png" />
+						</figure>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+</body>
 </html>
