Basic get of classes as test

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>anotherdnd</title>
 </head>
 <body>
-	<!-- <div id="app"></div> -->
 	
 	<!-- Navigation -->
 	<nav class="navbar is-dark" role="navigation">
@@ -15,6 +14,7 @@
 			<!-- Right elements -->
 			<div class="navbar-end">
 				<a class="navbar-item is-active">Home</a>
+				<a class="navbar-item" href="pages/classes.html">Classes</a>
 				
 				<!-- Dropdown -->
 				<div class="navbar-item has-dropdown is-hoverable">
@@ -57,6 +57,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="section">
+		<div class="container is-medium">
+			<div id="app"></div>
 		</div>
 	</section>
 
