Old changes and better restruct in progress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>anotherdnd</title>
 </head>
 <body>
-	
+
 	<!-- Navigation -->
 	<nav class="navbar is-dark" role="navigation">
 		<div class="navbar-menu">
@@ -58,22 +58,45 @@
 				</div>
 			</div>
 		</div>
+	</section> 
+
+
+	<section class="section info">
+
+		<div class="columns is-centered">
+
+			<div class="column is-one-quarter has-text-centered">
+				<div class="box">
+					<h2 class="title is-size-4">Manage your party</h2>
+					<p>Add members and manage their status from a centralized DM dashboard. We call it the "DMD".</p>
+				</div>
+			</div>
+			<div class="column is-one-quarter has-text-centered">
+				<div class="box">
+					<h2 class="title is-size-4">Add custom items</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius recusandae itaque, quisquam ad, eum nisi molestias voluptas voluptatibus asperiores maxime excepturi nihil ducimus vitae quae vel! Ab doloribus aut ullam?</p>
+				</div>
+			</div>
+			<div class="column is-one-quarter has-text-centered">
+				<div class="box">
+					<h2 class="title is-size-4">Deal with spells</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi consectetur, pariatur illo facere sint labore quaerat delectus nam ad dolore aperiam ullam asperiores aliquid quidem fugiat autem magnam, sunt totam.</p>
+				</div>
+			</div>
+		</div>
+
 	</section>
+
+
+	<div id="create"></div>
 
 	<section class="section">
-		<div class="container is-medium">
-			<div id="app"></div>
-		</div>
+	
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 	</section>
 
+
 </body>
-
-<script>
-
-	var test = 'hello'
-
-	
-
-</script>
 
 </html>
