Flat directory structures? What is this, DOS?

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<title>anotherdnd</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- This is to load some things -- namely SASS. Don't worry about it. -->
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="src/app.js"></script>
 
 </head>
 <body>
 
 	<div id="app"></div>
-	<script src="vuethings.js"></script>
+	<script src="src/vuethings.js"></script>
 </body>
 
 </html>
