Basic router working wow

--- a/index.html
+++ b/index.html
@@ -17,25 +17,33 @@
 
 				<div class="column ">
 					<div class="box">
+						<router-link to="/spells">
 						<h1 class="title is-size-4 has-text-black">Spells</h1>
+						</router-link>
 					</div>
 				</div>
 
 				<div class="column">
 					<div class="box">
+						<router-link to="/classes">
 						<h1 class="title is-size-4 has-text-black">Classes</h1>
+						</router-link>
 					</div>
 				</div>
 
 				<div class="column">
 					<div class="box">
+						<router-link to="/races">
 						<h1 class="title is-size-4 has-text-black">Races</h1>
+						</router-link>
 					</div>
 				</div>
 
 				<div class="column">
 					<div class="box">
+						<router-link to="/items">
 						<h1 class="title is-size-4 has-text-black">Items</h1>
+						</router-link>
 					</div>
 				</div>
 
@@ -52,8 +60,10 @@
 
 	<!-- Router stuff -->
 	<section class="section">
-		<div id="app"></div>
+		<div id="mainapp"></div>
 	</section>
+	
+
 	<script src="src/vuethings.js"></script>
 </body>
 
