--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
 	<title>anotherdnd</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 	<!-- This is to load some things -- namely SASS. Don't worry about it. -->
 	<script type="text/javascript" src="src/app.js"></script>
 
 </head>
 <body>
-
-
 	<!-- Router stuff -->
-	<!-- <section class="section"> -->
-		<div id="mainapp"></div>
-	<!-- </section> -->
-	
+	<div id="mainapp"></div>
+
 
 	<script src="src/vuethings.js"></script>
 </body>
