--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<!-- This is to load some things -- namely SASS. Don't worry about it. -->
-	<script type="text/javascript" src="src/app.js"></script>
+	<script type="module" src="src/app.js"></script>
 
 </head>
 <body>
@@ -13,7 +13,7 @@
 	<div id="mainapp"></div>
 
 
-	<script src="src/vuethings.js"></script>
+	<script type="module" src="src/vuethings.js"></script>
 </body>
 
 </html>
